--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Rock-Paper-Scissors</title>
-   <script src ></script>
+   <script src="script.js" ></script>
   </head>
   <body>
     
