Add UI using DOM

--- a/index.html
+++ b/index.html
@@ -2,9 +2,35 @@
 <html>
   <head>
     <title>Rock-Paper-Scissors</title>
-   <script src="script.js" ></script>
   </head>
   <body>
+   
+ <div class="gameContainer">
+  <h1>Rock Paper Scissor</h1>
+
+  
+    <h6 id="humanScore">Score</h6>
+    <h6 id="computerScore">Score</h6>
+ 
+  
+  <div class="choices">
+    <button id="Rock">Rock </button>
+    <button id="Paper">Paper </button>
+     <button id="Scissor">Scissor </button>
+     
+    </div> 
+    <button id=reset>Reset</button>
+
+    <div class="result" >
+    <h4 id='choiceResult'>humanChoice | ComputerChoice</h2>
+    <h2 id="gameResult">gameResult</h2>
+    </div>
+   
+    <!-- <h3 id="gameWinner"></h3> -->
+
+<h1 id="anounce"></h1>
     
+ </div>
+   <script src="script.js"></script>
 </body>
 </html>
