Remove unnecessary div

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
     <link href="style.css" rel="stylesheet">
+
   </head>
   <body>
-   <div class=parentContainer>
    <div class="gameContainer">
 <div>
         <h1 id="title">Rock Paper Scissor</h1>
@@ -29,8 +30,6 @@
   <h2 id="anounce"></h2>   
 </div>
    </div>
-      </div>
-  
   <script src="script.js"></script>
 </body>
 </html>
